<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmarDatos">


        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txTitulo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mgnTop"
            android:layout_marginBottom="@dimen/mgnBotton"
            android:text="@string/txtConfirmar" />

        <TextView
            android:id="@+id/txNombreC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txNormal"
            android:layout_marginLeft="@dimen/mgnIzq"
            android:layout_marginBottom="@dimen/mgnBottonLow"
            android:text="@string/txtNombreC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txLaFecNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mgnIzq"
                android:textSize="@dimen/txNormal"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/mgnBottonLow"
                android:text="@string/txtFechaNac" />
            <TextView
                android:id="@+id/txFecNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:layout_marginLeft="@dimen/mgnIzqDatos"
                android:text="asdas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txLaTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/mgnIzq"
                android:layout_marginBottom="@dimen/mgnBottonLow"
                android:text="@string/txtTel" />
            <TextView
                android:id="@+id/txTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:layout_marginLeft="@dimen/mgnIzqDatos"
                android:text="asdas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txLaEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/mgnIzq"
                android:layout_marginBottom="@dimen/mgnBottonLow"
                android:text="@string/txtEmail" />
            <TextView
                android:id="@+id/txEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:layout_marginLeft="@dimen/mgnIzqDatos"
                android:text="asdas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txLaDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/mgnIzq"
                android:layout_marginBottom="@dimen/mgnBottonLow"
                android:text="@string/txtDescripcion" />
            <TextView
                android:id="@+id/txDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txNormal"
                android:layout_marginLeft="@dimen/mgnIzqDatos"
                android:text="asdas" />
        </LinearLayout>

    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/EstiloBtnRise"
        android:text="@string/txtBtnEditar" />

</LinearLayout>